force-app/main/default/objects/Nuage_sync_params__c/Nuage_sync_params__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Nuage sync params</label>
</CustomObject>