force-app/main/default/objects/Nuage_sync_params__c/fields/Default_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Case_Owner__c</fullName>
    <label>Default Case Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>