force-app/main/default/objects/Nuage_sync_params__c/fields/Default_QA__c.field-meta.xml
<CustomField>
    <fullName>Default_QA__c</fullName>
    <label>Default QA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>