force-app/main/default/objects/Nuage_sync_params__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <label>Email Notification</label>
    <type>Email</type>
</CustomField>