force-app/main/default/objects/Nuage_sync_params__c/fields/Feed_Comment_trigger_disable__c.field-meta.xml
<CustomField>
    <fullName>Feed_Comment_trigger_disable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feed Comment trigger disable</label>
    <type>Checkbox</type>
</CustomField>