force-app/main/default/objects/Nuage_sync_params__c/fields/Inforge_user_Id__c.field-meta.xml
<CustomField>
    <fullName>Inforge_user_Id__c</fullName>
    <description>User with permissions to create and update case records, email message, chatter posts and comments</description>
    <label>Inforge user Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>